# sentiment-analysis

./: .dockerfile  .gitignore  Makefile  README.md  app.py  docker-compose.yml  prefect_flow.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: app.py  model_utils.py
app/templates/: index.html  result.html
scripts/: build_and_push.sh
src/: .dockerfile  app.py  data_prep.py  eval.py  evidently_monitor.py  model.py  save_hf.py  train.py
src/static/: style.css
src/templates/: base.html  index.html
src/tests/: test_model.py
static/: style.css
templates/: index.html  result.html
tests/: test_model.py
