[project]
name = "sentiment-analysis-main"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "evidently>=0.7.16",
    "flask>=3.1.2",
    "gunicorn>=23.0.0",
    "joblib>=1.5.2",
    "mlflow>=3.6.0",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "prefect>=3.6.2",
    "pytest>=9.0.1",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "ruff>=0.14.5",
    "scikit-learn>=1.7.2",
    "streamlit>=1.51.0",
    "torch>=2.9.0",
    "transformers>=4.57.1",
]

[tool.uv.workspace]
members = [
    "to_add_uv",
]
