[project]
name = "sentiment-analysis-main"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask",
    "gunicorn",
    "prometheus-client",
    "joblib",
    "transformers>=4.36.0",
    "torch",
    "scikit-learn>=1.2",
    "pandas",
    "mlflow",
    "pytest",
    "python-dotenv",
]

[tool.uv.workspace]
members = [
    "to_add_uv",
]
